playbook/roles/dashboard/files/defaultpage-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: defaultpage-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  selector:
    app: defaultpage

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: defaultpage
spec:
  selector:
    matchLabels:
      app: defaultpage
  replicas: 1
  template:
    metadata:
      labels:
        app: defaultpage
    spec:
      containers:
        - name: defaultpage
          image: httpd:alpine3.17
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: defaultpage-index #refers to volume name
              mountPath: /usr/local/apache2/htdocs/index.html #path to where to we mount the configmap
              subPath: index.html #file to put data into. Make sure it's the same as the 'key' and 'path'.
      volumes: #volume that maps to the configmap
        - name: defaultpage-index
          configMap: 
            name: defaultpage-config
            items:
              - key: index.html
                path: index.html
